# AsciiVision

./: .gitignore  CMakeLists.txt  README.md  video_player
include/: ascii_filter.hpp
src/: ascii_filter.cpp  main.cpp
